--- a/terraform.tfvars.sample
+++ b/terraform.tfvars.sample
@@ -2,4 +2,10 @@
 aws_access_key = ""
 aws_secret_key = ""
 public_key_path = ""
+
 gce_account_file_path = ""
+
+cloudflare_email = ""
+cloudflare_token = ""
+cloudflare_domain = ""
+cloudflare_subdomain = ""
